--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: your-org/deployment-ansible
-          path: ansibleconfig
+          ref: master
       - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
