--- a/ansibleconfig/inventory.ini
+++ b/ansibleconfig/inventory.ini
@@ -1,7 +1,3 @@
 [app]
-# Amazon Linux 2 instance
-3.239.216.100 ansible_user=TerraformWebServer ansible_ssh_private_key_file=C:/Users/BHAVADHARANIM/.ssh/id_rsa_github_actions_new
-
-# Ubuntu instance
-13.220.33.232 ansible_user=UbuntuServer_dev ansible_ssh_private_key_file=C:/Users/BHAVADHARANIM/.ssh/id_rsa_github_actions_new
-
+<EC2_PUBLIC_IP_1> ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/id_rsa_github_actions_new
+<EC2_PUBLIC_IP_2> ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa_github_actions_new
