--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Generate dynamic inventory.ini
         run: |
-          echo "[app]" > ansibleconfigs/inventory.ini
-          echo "${{ secrets.EC2_PUBLIC_IP_1 }} ansible_user=ec2-user ansible_ssh_private_key_file=/home/runner/.ssh/id_rsa_github_actions_new" >> ansibleconfigs/inventory.ini
-          echo "${{ secrets.EC2_PUBLIC_IP_2 }} ansible_user=ubuntu ansible_ssh_private_key_file=/home/runner/.ssh/id_rsa_github_actions_new" >> ansibleconfigs/inventory.ini
+          echo "[app]" > ansibleconfig/inventory.ini
+          echo "${{ secrets.EC2_PUBLIC_IP_1 }} ansible_user=ec2-user ansible_ssh_private_key_file=/home/runner/.ssh/id_rsa_github_actions_new" >> ansibleconfig/inventory.ini
+          echo "${{ secrets.EC2_PUBLIC_IP_2 }} ansible_user=ubuntu ansible_ssh_private_key_file=/home/runner/.ssh/id_rsa_github_actions_new" >> ansibleconfig/inventory.ini
 
       - name: Add EC2 instances to known_hosts
         run: |
@@ -41,4 +41,4 @@ jobs:
         env:
           ANSIBLE_HOST_KEY_CHECKING: "False"
         run: |
-          ansible-playbook -i ansibleconfigs/inventory.ini ansibleconfig/playbook.yml --private-key /home/runner/.ssh/id_rsa_github_actions_new
+          ansible-playbook -i ansibleconfig/inventory.ini ansibleconfig/playbook.yml --private-key /home/runner/.ssh/id_rsa_github_actions_new
