--- a/Playbooks/env_and_ssl.yml
+++ b/Playbooks/env_and_ssl.yml
@@ -32,8 +32,8 @@
     # 4️⃣ Copy SSL private key from GitHub Secret
     - name: Copy SSL private key to /etc/ssl/private
       copy:
-        content: "{{ lookup('env', 'PRIVKEY_PEM') }}"
-        dest: /etc/ssl/private/privkey.pem
+        content: "{{ lookup('env', 'EC2_SSH_KEY') }}"
+        dest: /etc/ssl/private/id_rsa_github_actions_new
         mode: '0600'
         owner: root
         group: root
