--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           terraform apply -auto-approve
           terraform output -raw ec2_public_ip > ec2_ip.txt
           echo "EC2_IP=$(cat ec2_ip.txt)" >> $GITHUB_ENV
-          echo "✅ Terraform EC2 IP: $(cat ec2_ip.txt)"
+          echo "Terraform EC2 IP: $(cat ec2_ip.txt)"
 
       # 6️⃣ Create inventory dynamically
       - name: Generate Inventory
