--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa_github_actions_new
-          chmod 600 ~/.ssh/id_rsa_github_actions_new
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/my-aws-key
+          chmod 600 ~/.ssh/my-aws-key
           echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
 
       # 4️⃣ Install Terraform & Ansible
@@ -62,7 +62,7 @@ jobs:
       - name: Generate Inventory
         run: |
           echo "[all]" > inventory.ini
-          echo "ec2-instance ansible_host=$EC2_IP ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/id_rsa_github_actions_new" >> inventory.ini
+          echo "ec2-instance ansible_host=$EC2_IP ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/my-aws-key" >> inventory.ini
           echo "[all:vars]" >> inventory.ini
           echo "ansible_python_interpreter=/usr/bin/python3" >> inventory.ini
           cat inventory.ini
@@ -84,4 +84,3 @@ jobs:
           ansible-playbook -i inventory.ini Playbooks/env_and_ssl.yml
           ansible-playbook -i inventory.ini Playbooks/rolling_update.yml
           ansible-playbook -i inventory.ini Playbooks/setup_monitoring.yml
-          
