--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [all]
-ec2-instance ansible_host=$EC2_IP ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/id_rsa_github_actions_new
+ec2-instance ansible_host=$EC2_IP ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/my-aws-key
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
